[package]
name = "basic-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.21.2", features = ["rand-std"] }
sha3 = "0.10.0"
hex = "0.4.3"
ureq = { version = "2.4.0", features = ["json"] }
rocksdb = "0.18.0"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
rlp = "0.5.1"
