[package]
name = "basic-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.0"
hex = "0.4.3"
ureq = { version = "2.4.0", features = ["json"] }
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
rlp = "0.5.1"
ethereum-tx-sign = "4.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tiny-bip39 = "0.8.2"
bip32 = { version = "0.3.0", features = ["secp256k1"] }
thiserror = "1.0.30"

[dev-dependencies]
test-case = "2.0.2"